# sanzu

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: sanzu_release.yml  test.yml
demo/: README.md  run-demo.sh
demo/client/: Dockerfile  run-demo-client.sh  sanzu.toml
demo/server/: Dockerfile  run-demo-server.sh  run_video_server.py  run_x_env.sh  sanzu.toml  sanzu_broker.toml
demo/server/certs/: client.conf  gen_ca_and_certs.sh
sanzu/: Cargo.toml  README.md  build.rs  sanzu.toml
sanzu-broker/: Cargo.toml  README.md  sanzu_broker.toml
sanzu-broker/certs/: client.conf  gen_ca_and_certs.sh  test.conf
sanzu-broker/src/: config.rs  main.rs  proto.rs
sanzu-common/: Cargo.toml  build.rs
sanzu-common/proto/: tunnel.proto3
sanzu-common/src/: auth_kerberos.rs  auth_pam.rs  lib.rs  proto.rs  sspi.rs  tls_helper.rs  utils.rs
sanzu-common/windows_bindings/src/: lib.rs
sanzu/data/winres/: manifest.xml
sanzu/doc/: architecture.md
sanzu/src/: auth_kerberos.rs  client.rs  client_druid.rs  client_utils.rs  client_wind3d.rs  client_x11.rs  config.rs  ffmpeg_helper.rs  lib.rs  osd.rs  proxy.rs  proxy_windows.rs  server.rs  server_utils.rs  server_windows.rs  server_x11.rs  sound.rs  utils.rs  utils_win.rs  utils_x11.rs  video_decoder.rs  video_encoder.rs  yuv_rgb_rs.rs
sanzu/windows_bindings/: Cargo.toml  build.rs
sanzu/wix/: main.wxs
