[package]
name = "sanzu_broker"
version = "0.1.4"
authors = ["Fabrice Desclaux <fabrice.desclaux@cea.fr>"]
edition = "2018"
readme = "README.md"
description = "Broker for sanzu video server"
license = "GPL-3.0"

[build-dependencies]
bindgen = "0.65"
cc = "1.0"

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
clap = "4.4"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
mio = { version = "0.8", features = ["net", "os-poll"] }
nix = "0.26"
rustls = "0.21"
rustls-pemfile = "1.0"
sanzu-common = { path="../sanzu-common", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
socket2 = {version = "0.5", features=['all'] }
toml = "0.8"
uuid = { version = "1.4", features = ["serde", "v4"] }
x509-parser = "0.15"
libgssapi = { version = "0.6", optional = true }

[features]
kerberos = ["sanzu-common/kerberos"]
default = ["kerberos"]

[package.metadata.deb]
name = "sanzu-broker"
maintainer = "Fabrice Desclaux <fabrice.desclaux@cea.fr>"
copyright = "2021, CEA <fabrice.desclaux@cea.fr>"
extended-description = """Broker for sanzu server"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sanzu_broker", "usr/bin/", "755"],
    ["sanzu_broker.toml", "etc/sanzu_broker.toml", "644"],
    ["README.md", "usr/share/doc/sanzu_broker/README", "644"],
]
conf-files = ["/etc/sanzu_broker.toml"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/sanzu_broker", dest = "/usr/bin/sanzu_broker", mode = "755" },
    { source = "sanzu_broker.toml", dest = "/etc/sanzu_broker.toml", mode = "644", config = true },
    { source = "README.md", dest = "/usr/share/doc/sanzu_broker/README", mode = "644", doc = true },
]
