[package]
name = "sanzu-common"
version = "0.1.4"
authors = ["Fabrice Desclaux <fabrice.desclaux@cea.fr>"]
edition = "2018"
description = "Sanzu helper code"

[build-dependencies]
bindgen = "0.69"
prost-build = "0.12"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
env_logger = "0.10"
log = "0.4"
prost = "0.12"
rustls = "0.22"
rustls-pemfile = "2.0"
rustls-pki-types = { version="1",  features = ["std"] }
webpki-roots = "0.26"
x509-parser = "0.15"

[features]
kerberos = ["libgssapi"]
default = []

[target.'cfg(windows)'.dependencies]
winapi = "0.3"


[target.'cfg(unix)'.dependencies]
libgssapi = { version = "0.7", optional = true }
pam = {git = "https://github.com/serpilliere/pam.git", branch="multiple_fix"}
