[package]
name = "sanzu"
version = "0.1.4"
authors = ["Fabrice Desclaux <fabrice.desclaux@cea.fr>"]
edition = "2018"
readme = "README.md"
description = "Sanzu video server, proxy and client"
license = "GPL-3.0"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
winres = {git = "https://github.com/serpilliere/winres", branch="link_resources"}

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = "4.5"
cpal = "0.15"
embedded-graphics = "0.8"
encoding_rs = "0.8"
env_logger = "0.11"
err-derive = "0.3"
ffmpeg-sys-next = "6.0"
hound = "3.5"
lazy_static = "1.4"
libc = "0.2"
lock_keys = {git="https://github.com/risoflora/lock_keys", rev="38d97697c054d56e40c3975c0add04c33a05e4f4"}
log = "0.4"
memmap2 = "0.9"
opus= "0.3"
rpassword = "7.2"
rustls = "0.22"
rustls-pemfile = "2.1"
rustls-pki-types = { version="1",  features = ["std"] }
sanzu-common = { path="../sanzu-common", default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9"
socket2 = {version = "0.5", features=['all'] }
spin_sleep_util = "0.1"
twelf = {version = "0.15.0", features=["toml"]}
toml = "0.8"
dbus = { version = "0.9", optional = true }
dbus-crossroads = { version = "0.5", optional = true }
notify-rust = { version = "4.10", features = ["images"], optional = true }
webpki-roots = "0.26"
rayon = "1.7"
x509-parser = "0.16"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
cpufeatures = "0.2"

[features]
notify = ["notify-rust", "dbus", "dbus-crossroads"]
printfile = ["notify-rust", "dbus", "dbus-crossroads"]
kerberos = ["sanzu-common/kerberos"]
default = ["kerberos"]


[target.'cfg(windows)'.dependencies]
clipboard-win = "5.1"
ico = "0.3"
winapi = { version = "0.3", features = [
  "impl-default", "winuser", "wingdi", "winbase", "libloaderapi", "processthreadsapi",
  "errhandlingapi", "winerror", "commctrl", "sysinfoapi", "shobjidl", "combaseapi",
  "commdlg", "d2d1", "objbase", "dwrite", "winnls", "shellapi", "wincodec", "stringapiset",
  "d3d9", "d3d9types", "dwmapi", "d3d11", "dxgi1_2", "sspi"] }

[target.'cfg(unix)'.dependencies]
libgssapi = { version = "0.7", optional = true }
nix = {version = "0.28", features = ["process"]}
vsock = "0.5"
x11-clipboard = "0.9"

[dependencies.x11rb]
version = "0.13"
features = ["shm", "xtest", "xfixes", "damage", "randr"]

[package.metadata.deb]
maintainer = "Fabrice Desclaux <fabrice.desclaux@cea.fr>"
copyright = "2021, CEA <fabrice.desclaux@cea.fr>"
extended-description = """\
Video server and client for remote workspace \
based on rust."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sanzu_server", "usr/bin/", "755"],
    ["target/release/sanzu_client", "usr/bin/", "755"],
    ["target/release/sanzu_proxy", "usr/bin/", "755"],
    ["sanzu.toml", "etc/sanzu.toml", "644"],
    ["README.md", "usr/share/doc/sanzu/README", "644"],
]
conf-files = ["/etc/sanzu.toml"]

[package.metadata.deb.variants.client]
name = "sanzu-client"
assets = [
    ["target/release/sanzu_client", "usr/bin/", "755"],
    ["sanzu.toml", "etc/sanzu.toml", "644"],
    ["README.md", "usr/share/doc/sanzu-client/README", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/sanzu_server", dest = "/usr/bin/sanzu_server", mode = "0755" },
    { source = "target/release/sanzu_client", dest = "/usr/bin/sanzu_client", mode = "0755" },
    { source = "target/release/sanzu_proxy", dest = "/usr/bin/sanzu_proxy", mode = "0755" },
    { source = "sanzu.toml", dest = "/etc/sanzu.toml", mode = "0644", conf = true },
    { source = "README.md", dest = "/usr/share/doc/sanzu/README", mode = "0644", doc = true },
]

[package.metadata.winres]
LegalCopyright = "Copyright © 2021-2023"
FileDescription = "Sanzu video server, proxy and client"

# Compilation for Windows:
# export PKG_CONFIG_ALLOW_CROSS=1
# cargo build --release --target "x86_64-pc-windows-gnu"
